--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,24 +1,41 @@
-name: RELEASE
-on: [workflow_dispatch]
+name: Release
+on:
+  push:
+    branches:
+      - main # or main
+
+permissions:
+  contents: read # for checkout
+
 jobs:
-  main:
+  release:
+    name: Release
     permissions:
-      contents: read
-      actions: read
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for npm provenance
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 'lts/*'
       - uses: nrwl/nx-set-shas@v3
-      - name: Install deps
-        run: npm ci
+      - name: Install dependencies
+        run: npm clean-install
+      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
+        run: npm audit signatures
       - name: Lint
         run: npx nx run-many -t lint
       - name: Test
         run: npx nx run-many -t test --configuration=ci
       - name: Release
-        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
