--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,5 @@
 name: Release
-on:
-  push:
-    branches:
-      - main # or main
+on: [workflow_dispatch]
 
 permissions:
   contents: read # for checkout
