--- a/packages/api-interfaces/package.json
+++ b/packages/api-interfaces/package.json
@@ -2,5 +2,7 @@
   "name": "@deinrufde/api-interfaces",
   "version": "0.0.1",
   "dependencies": {},
-  "private": true
+  "publishConfig": {
+    "access": "public"
+  }
 }
