--- a/nx.json
+++ b/nx.json
@@ -18,7 +18,21 @@
   "targetDefaults": {
     "@nx/vite:test": {
       "cache": true,
-      "inputs": ["default", "^default"]
+      "inputs": [
+        "default",
+        "^default"
+      ]
+    }
+  },
+  "release": {
+    "projects": [
+      "packages/*"
+    ],
+    "version": {
+      "conventionalCommits": true,
+      "generatorOptions": {
+        "fallbackCurrentVersionResolver": "disk"
+      }
     }
   }
 }
