--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.6.2",
     "replace-json-property": "^1.9.0",
     "rollup": "^4.14.0",
+    "semantic-release": "^24.1.2",
     "semantic-release-npm-github-publish": "^1.5.5",
     "swc-loader": "0.1.15",
     "tslib": "^2.3.0",
