--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
@@ -33,8 +34,7 @@
     "prettier": "^2.6.2",
     "replace-json-property": "^1.9.0",
     "rollup": "^4.14.0",
-    "semantic-release": "^24.1.2",
-    "semantic-release-npm-github-publish": "^1.5.5",
+    "semantic-release": "^21.0.1",
     "swc-loader": "0.1.15",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
