--- a/package.json
+++ b/package.json
@@ -2,47 +2,69 @@
   "name": "libs-deinrufde",
   "version": "0.0.1",
   "license": "MIT",
-  "scripts": {
-    "semantic-release": "semantic-release"
+  "scripts": {},
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~16.1.0",
+    "@angular/common": "~16.1.0",
+    "@angular/compiler": "~16.1.0",
+    "@angular/core": "~16.1.0",
+    "@angular/forms": "~16.1.0",
+    "@angular/platform-browser": "~16.1.0",
+    "@angular/platform-browser-dynamic": "~16.1.0",
+    "@angular/router": "~16.1.0",
+    "@nx/angular": "16.5.1",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@nx/eslint": "19.8.3",
-    "@nx/eslint-plugin": "19.8.3",
-    "@nx/js": "19.8.3",
-    "@nx/rollup": "19.8.3",
-    "@nx/vite": "19.8.3",
-    "@nx/web": "19.8.3",
+    "@angular-devkit/build-angular": "~16.1.0",
+    "@angular-devkit/core": "~16.1.0",
+    "@angular-devkit/schematics": "~16.1.0",
+    "@angular-eslint/eslint-plugin": "~16.0.0",
+    "@angular-eslint/eslint-plugin-template": "~16.0.0",
+    "@angular-eslint/template-parser": "~16.0.0",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "~16.1.0",
+    "@angular/language-service": "~16.1.0",
+    "@nx/cypress": "16.5.1",
+    "@nx/eslint-plugin": "16.5.1",
+    "@nx/jest": "16.5.1",
+    "@nx/js": "16.5.1",
+    "@nx/linter": "16.5.1",
+    "@nx/web": "16.5.1",
+    "@nx/workspace": "16.5.1",
+    "@schematics/angular": "~16.1.0",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/commit-analyzer": "^10.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@semantic-release/release-notes-generator": "^14.0.1",
-    "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.3.12",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/node": "18.16.9",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.3.1",
-    "conventional-changelog-conventionalcommits": "^8.0.0",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
-    "nx": "19.8.3",
-    "nx-release": "^3.3.0",
+    "@semantic-release/release-notes-generator": "^11.0.4",
+    "@types/jest": "^29.4.0",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "conventional-changelog-conventionalcommits": "^6.1.0",
+    "cypress": "^12.16.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "~13.1.0",
+    "ng-packagr": "~16.1.0",
+    "nx": "16.5.1",
+    "nx-cloud": "latest",
+    "nx-release": "^3.1.3",
+    "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "replace-json-property": "^1.9.0",
-    "rollup": "^4.14.0",
-    "semantic-release": "^21.0.1",
-    "swc-loader": "0.1.15",
-    "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.0",
-    "vitest": "^1.3.1"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.1.3"
+  }
 }
