feat(auth): add OAuth2 login functionality
This commit adds OAuth2 login support, allowing users to log in with their Google and Facebook accounts.
The existing authentication method remains unchanged, but the session management has been updated to handle OAuth2 tokens.

BREAKING CHANGE: The session management system has been refactored, and existing sessions will no longer be valid.
Users will be required to log in again after deploying this update.

Closes #345

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@deinrufde/api-interfaces": ["packages/api-interfaces/src/index.ts"]
+      "@deinrufde/shared": ["packages/shared/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
